--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -1,19 +1,44 @@
 <html>
     <head>
-        <body>
-            <h1 id="title">Offside detection</h1>
-            <nav>
-                <ul>
-                    <li><a href="{{ url_for('index')}}">New detection</a></li>
-                    <li><a href="{{url_for('about')}}">About</a></li>
-                </ul>
-            </nav>
-            <div>
-                <ul id="calibration_type">
-                    <li><a href="interact.html">Interactive</a></li>
-                    <li><a href="auto.html">Automatic</a></li>
-                </ul>
-            </div>
-        </body>
+        <title>Offside detection</title>
+        <link rel="stylesheet" href="static/css/style.css?v=1.0.0">
     </head>
+    <body>
+        <main class="main">
+            <aside class="sidebar">
+            
+                <nav class="nav">
+                    <ul class="active">
+                        <li><a href="{{ url_for('index')}}">New detection</a></li>
+                        <li><a href="{{url_for('about')}}">About</a></li>
+                    </ul>
+                </nav>
+            </aside>
+          
+            <section class="page">
+                <div class="container">
+                    <h1 id="title">Offside detection</h1>
+                    
+                        <ul id="tilesWrap">
+                            <li>
+                                <h2>01</h2>
+                                <a href="interact.html"><h3>Interactive</h3></a>
+                                <p>
+                                    click on image to identify points to calibrate the image
+                                </p>
+                            </li>
+                            <li>
+                                <h2>02</h2>
+                                <a href="auto.html"><h3>Automatic</h3></a>
+                                <p>
+                                    Automatically calibrate the image
+                                </p>
+                            </li>
+                        </ul>
+                    
+                </div>
+            </section>
+
+        </main>
+    </body>
 </html>
