--- a/flask_app/templates/offside.html
+++ b/flask_app/templates/offside.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Offside detection</title>
+        <link rel="stylesheet" href="static/css/style.css?v=1.0.0">
     </head>
     <body>
         <body>
@@ -11,8 +12,14 @@
                     <li><a href="about.html">About</a></li>
                 </ul>
             </nav>
-            
-
+            <div>
+                <ul>
+            <li>detected players </li>
+            <img src="static/images/user_image_detected.jpg" alt="players" width="auto" height="500">
+            <li>map of players</li>
+            <img src="static/images/field_with_players.jpg" alt="players" width="auto" height="500">
+                    </ul>
+            </div>
             
     </body>
 </html>
