--- a/flask_app/templates/interact.html
+++ b/flask_app/templates/interact.html
@@ -19,7 +19,7 @@
           
             <section class="page">
                 <div class="container">
-                    <h1 id="title">Offside detection</h1>
+                    <h1 id="title"><a href="{{ url_for('index')}}">Offside detection</a></h1>
                     
 
             <form method="post" enctype="multipart/form-data">
