--- a/flask_app/templates/offside.html
+++ b/flask_app/templates/offside.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <body>
-            <h1 id="title">Offside detection</h1>
+            <h1 id="title"><a href="{{ url_for('index')}}">Offside detection</a></h1>
             <nav>
                 <ul>
                     <li><a href="{{ url_for('index')}}">New detection</a></li>
