added ar lines, fixed calib. , updated web layout

--- a/templates/calibration.html
+++ b/templates/calibration.html
@@ -3,50 +3,48 @@
         <title>Offside detection</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> 
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">   
         <link rel="stylesheet" href="static/css/style.css?v=1.0.0">
     </head>
     <body>
-    <!-- <main class="main"> -->
-        <!-- <aside class="sidebar"> -->
-        
-            <!-- <nav class="nav"> -->
-                <ul class="active">
-                    <li><a href="{{ url_for('index')}}">New detection</a></li>
-                    <li><a href="{{url_for('about')}}">About</a></li>
-                </ul>
-            <!-- </nav> -->
-        <!-- </aside> -->
-      
-        <!-- <section class="page"> -->
-            <div class="container">
-                <h1 id="title"><a href="{{ url_for('index')}}">Offside detection</a></h1>
+            <div class="bg-light bg-gradient">
+                <h1 id="title"><a href="{{ url_for('index')}}" style="all:unset;cursor:pointer">Offside detection</a></h1>
                 
 
     
             <div>
                 <h2>How to calibrate the image</h2>
                 
-                    Click on 4 points on both images for the calibration. The points should be corresponding and in the same order. <br>
+                    Click on 4 corresponding points on both images in the same ordre for the calibration. <br>
 
-                    After the fouth point is clicked, click again for the fifth time to confirm, you will then get coordinates which you'll need to put in the text fields below.
+                    After the fouth point is clicked, click again for the fifth time to confirm, you will then get coordinates which will be put in the text boxes. <br>
                 
                 {% if feedback %}
                 <p class="text-danger">{{ feedback }}</p>
                 {% endif %}
                 <div class='parent'>
                     <div class='child'>
-                        <img src="{{'static/images/field.jpg'}}" id="field" height="400px" width=auto />
+                        <div id="field-container">
+                            <img src="{{'static/images/field.jpg'}}" id="field" height="400px" width=auto />
+                            <div class="crosshair-vertical"></div>
+                            <div class="crosshair-horizontal"></div>
+                        </div>
                         <h4>Field coordinates</h4>
                         <p id="field_coor"></p>
             <form method="post" enctype="multipart/form-data">
-                            <label>The field points coordinates</label>
-                            <input type="text"  id="field_coord" name="field_coord" />
+                <label>The field points coordinates</label>
+                <input type="text"  id="field_coord" name="field_coord" /><br/>
+                <input type="submit" value="calibrate" class="btn btn-primary position-absolute start-50 translate-middle">
                             
                         
                     </div>
                     <div class='child'>
                         <!-- <img src="{{'static/user_input/'}}{{file1}}" id="user_input" width="400px" height=auto /> -->
-                        <img src="static/user_input/user_image.jpg" id="user_input" height="400px" width=auto />
+                        <div id="user-container">
+                            <img src="{{ image_b64 }}" id="user_input" height="400px" width=auto />
+                            <div class="crosshair-vertical"></div>
+                            <div class="crosshair-horizontal"></div>
+                        </div>
                         <h4>User coordinates</h4>
                         <p id="user_img_coor"></p>
                             <label>The user points coordinates</label>
@@ -55,11 +53,10 @@
                     </div>
 
                 </div>
-                <input type="submit" value="calibrate">
             </form>
             </div>
                 <div id="coor1"></div>
-
+            </div>
 
 
               
@@ -67,7 +64,7 @@
                     var field_pts =0;                    
                     var field_coor= [];             
                                        
-                    $('#field').click(function(e)
+                    $('#field-container').click(function(e)
                     {   
                         var offset_t = $(this).offset().top - $(window).scrollTop();
                         var offset_l = $(this).offset().left - $(window).scrollLeft();
@@ -81,7 +78,7 @@
                         }
                         else{
                             alert("You have already clicked 4 points");
-                            document.getElementById("field_coor").innerHTML=field_coor;
+                            document.getElementById("field_coord").value=field_coor;
                         }
                     });
 
@@ -91,7 +88,7 @@
                     var user_coor= [];   
                     var user_pts=0;          
                                        
-                    $('#user_input').click(function(e)
+                    $('#user-container').click(function(e)
                     {   
                         var offset_t = $(this).offset().top - $(window).scrollTop();
                         var offset_l = $(this).offset().left - $(window).scrollLeft();
@@ -105,7 +102,7 @@
                         }
                         else{
                             alert("You have already clicked 4 points");
-                            document.getElementById("user_img_coor").innerHTML=user_coor;
+                            document.getElementById("user_coord").value=user_coor;  
                         }
                        
                     });
@@ -123,7 +120,57 @@
                         }
 
                 </script>
-            </div>
+                <script>
+                    //field
+                    let field_container = document.getElementById('field-container');
+                    let field_crosshair_vertical = field_container.querySelector('.crosshair-vertical');
+                    let field_crosshair_horizontal = field_container.querySelector('.crosshair-horizontal');
+                    
+                    field_container.addEventListener('mousemove', (e) => {
+                        let x = e.offsetX;
+                        let y = e.offsetY;
+                        x = (x*100)/field_container.offsetWidth
+                        y = (y*100)/field_container.offsetHeight
+                    console.log('x',x);
+                    console.log('y',y);
+                        field_crosshair_vertical.style.left = x+"%";
+                        field_crosshair_vertical.style.visibility ="visible" ;
+                        field_crosshair_horizontal.style.top = y+"%";
+                        field_crosshair_horizontal.style.visibility = "visible" ;
+                        
+                    });
+                    field_container.addEventListener('mouseout',()=>{
+                        field_crosshair_vertical.style.visibility ="hidden" ;
+                        field_crosshair_horizontal.style.visibility = "hidden" ;
+                        
+                    });
+                    </script>
+                    <script>
+                    //user
+                    let user_container = document.getElementById('user-container');
+                    let user_crosshair_vertical = user_container.querySelector('.crosshair-vertical');
+                    let user_crosshair_horizontal = user_container.querySelector('.crosshair-horizontal');
+                    
+                    user_container.addEventListener('mousemove', (e) => {
+                        let x = e.offsetX;
+                        let y = e.offsetY;
+                        x = (x*100)/user_container.offsetWidth
+                        y = (y*100)/user_container.offsetHeight
+                    console.log('x',x);
+                    console.log('y',y);
+                        user_crosshair_vertical.style.left = x+"%";
+                        user_crosshair_vertical.style.visibility ="visible" ;
+                        user_crosshair_horizontal.style.top = y+"%";
+                        user_crosshair_horizontal.style.visibility = "visible" ;
+                        
+                    });
+                    user_container.addEventListener('mouseout',()=>{
+                        user_crosshair_vertical.style.visibility ="hidden" ;
+                        user_crosshair_horizontal.style.visibility = "hidden" ;
+                        
+                    });
+                    
+                </script>
             <!-- </section> -->
         <!-- </main>   -->
         </body>
