--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,15 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
 body {
-  background-image: url("background.png");
-  background-color: #cccccc;
   /* Full height */
-  height: 100%;
+  /* height: 100%; */
 
   /* Center and scale the image nicely */
-  background-position: center;
+  /* background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: cover; */
  }
 
 
@@ -17,9 +15,7 @@ body {
 h1{
   font-family: 'Open Sans', sans-serif;
   font-size: 50px;
-  color: #ffffff;
   text-align: center;
-  margin-top: 10%;
 }
 #calibration_type{
   /* list-style-type: none; */
@@ -34,218 +30,7 @@ h1{
 
 }
 
- html {
-	 font-family: Arial;
-	 font-size: 16px;
-	 background: #5e42a6;
-}
- .sidebar {
-	 position: fixed;
-	 width: 25%;
-	 height: 100vh;
-	 background: #312450;
-	 font-size: 0.65em;
-}
- .nav {
-	 position: relative;
-	 margin: 0 15%;
-	 text-align: right;
-	 top: 50%;
-	 transform: translateY(-50%);
-	 font-weight: bold;
-}
- .nav ul {
-	 list-style: none;
-}
- .nav ul li {
-	 position: relative;
-	 margin: 3.2em 0;
-}
- .nav ul li a {
-	 line-height: 5em;
-	 text-transform: uppercase;
-	 text-decoration: none;
-	 letter-spacing: 0.4em;
-	 color: rgba(255, 255, 255, 0.35);
-	 display: block;
-	 transition: all ease-out 300ms;
-}
- .nav ul li.active a {
-	 color: white;
-}
- .nav ul li:not(.active)::after {
-	 opacity: 0.2;
-}
- .nav ul li:not(.active):hover a {
-	 color: rgba(255, 255, 255, 0.75);
-}
- .nav ul li::after {
-	 content: "";
-	 position: absolute;
-	 width: 100%;
-	 height: 0.2em;
-	 background: black;
-	 left: 0;
-	 bottom: 0;
-	 background-image: linear-gradient(to right, #5e42a6, #b74e91);
-}
- .page {
-	 position: relative;
-	 width: 75%;
-	 float: right;
-	 height: 100vh;
-}
- .page .container {
-	 display: flex;
-	 flex-direction: column;
-	 align-items: center;
-	 justify-content: center;
-	 height: 100%;
-}
- .page a {
-	 position: relative;
-}
- .page a img {
-	 width: 48px;
-	 height: 48px;
-}
- .page p {
-	 text-transform: uppercase;
-	 font-size: 1em;
-	 letter-spacing: 0.1em;
-	 color: #fff;
-	 font-weight: bold;
-	 margin-top: 20px;
-}
- 
 
-
-
-
-.tilesWrap {
-	padding: 0;
-	margin: 50px auto;
-	list-style: none;
-	text-align: center;
-}
-.tilesWrap li {
-	display: inline-block;
-	width: 20%;
-	min-width: 200px;
-	max-width: 230px;
-	padding: 80px 20px 40px;
-	position: relative;
-	vertical-align: top;
-	margin: 10px;
-	font-family: 'helvetica', san-serif;
-	min-height: 25vh;
-	background: #262a2b;
-	border: 1px solid #252727;
-	text-align: left;
-}
-.tilesWrap li h2 {
-	font-size: 114px;
-	margin: 0;
-	position: absolute;
-	opacity: 0.2;
-	top: 50px;
-	right: 10px;
-	transition: all 0.3s ease-in-out;
-}
-.tilesWrap li h3 {
-	font-size: 20px;
-	color: #b7b7b7;
-	margin-bottom: 5px;
-}
-.tilesWrap li p {
-	font-size: 16px;
-	line-height: 18px;
-	color: #b7b7b7;
-	margin-top: 5px;
-}
-.tilesWrap li button {
-	background: transparent;
-	border: 1px solid #b7b7b7;
-	padding: 10px 20px;
-	color: #b7b7b7;
-	border-radius: 3px;
-	position: relative;
-	transition: all 0.3s ease-in-out;
-	transform: translateY(-40px);
-	opacity: 0;
-	cursor: pointer;
-	overflow: hidden;
-}
-.tilesWrap li button:before {
-	content: '';
-	position: absolute;
-	height: 100%;
-	width: 120%;
-	background: #b7b7b7;
-	top: 0;
-	opacity: 0;
-	left: -140px;
-	border-radius: 0 20px 20px 0;
-	z-index: -1;
-	transition: all 0.3s ease-in-out;
-	
-}
-.tilesWrap li:hover button {
-	transform: translateY(5px);
-	opacity: 1;
-}
-.tilesWrap li button:hover {
-	color: #262a2b;
-}
-.tilesWrap li button:hover:before {
-	left: 0;
-	opacity: 1;
-}
-.tilesWrap li:hover h2 {
-	top: 0px;
-	opacity: 0.6;
-}
-
-.tilesWrap li:before {
-	content: '';
-	position: absolute;
-	top: -2px;
-	left: -2px;
-	right: -2px;
-	bottom: -2px;
-	z-index: -1;
-	background: #fff;
-	transform: skew(2deg, 2deg);
-}
-.tilesWrap li:after {
-	content: '';
-	position: absolute;
-	width: 40%;
-	height: 100%;
-	left: 0;
-	top: 0;
-	background: rgba(255, 255, 255, 0.02);
-}
-.tilesWrap li:nth-child(1):before {
-	background: #C9FFBF;
-background: -webkit-linear-gradient(to right, #FFAFBD, #C9FFBF);
-background: linear-gradient(to right, #FFAFBD, #C9FFBF);
-}
-.tilesWrap li:nth-child(2):before {
-	background: #f2709c;
-background: -webkit-linear-gradient(to right, #ff9472, #f2709c);
-background: linear-gradient(to right, #ff9472, #f2709c);
-}
-.tilesWrap li:nth-child(3):before {
-	background: #c21500;
-background: -webkit-linear-gradient(to right, #ffc500, #c21500);
-background: linear-gradient(to right, #ffc500, #c21500);
-}
-.tilesWrap li:nth-child(4):before {
-	background: #FC354C;
-background: -webkit-linear-gradient(to right, #0ABFBC, #FC354C);
-background: linear-gradient(to right, #0ABFBC, #FC354C);
-}
 
 
 .text-danger{
@@ -262,3 +47,50 @@ background: linear-gradient(to right, #0ABFBC, #FC354C);
     flex: 1;
     margin: 10px;
   }
+
+  .first-slide {
+	/* make darker; */
+	background-color: rgba(0, 0, 0, 0.5);
+  }
+
+  .crosshair-vertical{
+	background-color:red;
+	width:2px;
+	height:100%;
+	position:absolute;
+	top:0;
+	left:10%;
+	visibility:hidden;
+}
+.crosshair-horizontal{
+	background-color:red;
+	width:100%;
+	height:2px;
+	position:absolute;
+	top:20%;
+	left:0;
+	/* transform:rotate(90deg); */
+	/* transform-origin:top left; */
+	visibility:hidden;
+	/* z-index: 1000; */
+}
+#field-container{
+	position:relative;
+	height:400px;
+	width:auto;
+	/* top:0; */
+	/* left:500px; */
+	/* overflow:hidden; */
+	cursor:crosshair;
+	/* border: solid red; */
+
+}
+#user-container{
+	position:relative;
+	height:400px;
+	width:auto;
+	/* top:0; */
+	/* left:500px; */
+	overflow:hidden;
+	cursor:crosshair;
+}
