--- a/templates/offside.html
+++ b/templates/offside.html
@@ -21,6 +21,9 @@
                 </div>
 
             </div>
+            <h3>Next step</h3>
+            Assign players to teams and show the offside lines for each team
+            
 
  
         </div>
