--- a/templates/no_player.html
+++ b/templates/no_player.html
@@ -13,6 +13,12 @@
             <div>
                 No player detected
             </div>
+            <div>
+                <a href="{{ url_for('index')}}">Try again</a>
+            </div>
+            <div>
+                <img src="{{image_b64}}" width="600px" height=auto alt="input image" />
+            </div>
             
     </body>
 </html>
